Prevent overflow in modal

--- a/styles/partials/_modal.scss
+++ b/styles/partials/_modal.scss
@@ -6,6 +6,7 @@
     width: 100%;
     background: $modal-bg;
     transition: top 0.5s ease; // Timing corresponds to delay in closeModal() function
+    overflow-wrap: break-word; // Break line inside words that would overflow the container
 
     @media (min-width: 481px) {
         width: 90%;
